<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94299660">

    <TextView
        android:id="@+id/textViewNotas100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:text="@string/notas100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSaldoAtual" />

    <TextView
        android:id="@+id/textViewNotas50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/notas50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotas100" />

    <TextView
        android:id="@+id/textViewNotas20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/notas20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotas50" />

    <TextView
        android:id="@+id/textViewNotas10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/notas10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotas20" />

    <TextView
        android:id="@+id/textViewQuantidadeNotas100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toEndOf="@+id/textViewNotas100"
        tools:layout_editor_absoluteY="169dp" />

    <TextView
        android:id="@+id/textViewQuantidadeNotas50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toEndOf="@+id/textViewNotas50"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/textViewQuantidadeNotas20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toEndOf="@+id/textViewNotas20"
        tools:layout_editor_absoluteY="279dp" />

    <TextView
        android:id="@+id/textViewQuantidadeNotas10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/textViewNotas10"
        tools:layout_editor_absoluteY="323dp" />

    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="129dp"
        android:layout_height="66dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="84dp"
        android:background="#2D9C2F"
        android:text="@string/botaoAbastecer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotas10" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="129dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:background="#AC1A1A"
        android:text="@string/botaoSair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toEndOf="@+id/buttonConfirmar"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotas10" />

    <TextView
        android:id="@+id/textViewSaldoAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldoAtual"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="66dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toEndOf="@+id/textViewSaldoAtual"
        tools:layout_editor_absoluteY="71dp" />

</androidx.constraintlayout.widget.ConstraintLayout>