<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94299660">

    <EditText
        android:id="@+id/editTextSaque"
        android:layout_width="280dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="Insira um valor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNotas100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:text="@string/notas100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSaque" />

    <TextView
        android:id="@+id/textViewNotas50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/notas50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotas100" />

    <TextView
        android:id="@+id/textViewNotas20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/notas20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotas50" />

    <TextView
        android:id="@+id/textViewNotas10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/notas10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotas20" />

    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="129dp"
        android:layout_height="66dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="84dp"
        android:background="#AD7D02"
        android:text="@string/botaoAbastecer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotas10" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="129dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:background="#2D9C2F"
        android:text="@string/botaoSaldo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toEndOf="@+id/buttonConfirmar"
        tools:layout_editor_absoluteY="426dp" />

    <Button
        android:id="@+id/buttonSair"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_marginBottom="152dp"
        android:background="#AC1A1A"
        android:text="@string/botaoSair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCancelar"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="168dp"
        android:layout_height="37dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSaque" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="168dp"
        android:layout_height="37dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewNotas50"
        tools:layout_editor_absoluteY="220dp" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="168dp"
        android:layout_height="37dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewNotas20"
        tools:layout_editor_absoluteY="275dp" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="168dp"
        android:layout_height="37dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewNotas10"
        tools:layout_editor_absoluteY="323dp" />

</androidx.constraintlayout.widget.ConstraintLayout>